--- a/configs/experiment/mnist_train.yaml
+++ b/configs/experiment/mnist_train.yaml
@@ -1,13 +1,13 @@
 # @package _global_
 
 # to execute this experiment run:
-# python train.py experiment=example
+# python train.py experiment=mnist_train
 
 defaults:
   - override /data: mnist
   - override /model: mnist
   - override /callbacks: default
-  - override /trainer: default
+  - override /trainer: gpu
 
 # all parameters below will be merged with parameters from default configurations set above
 # this allows you to overwrite only specified parameters
@@ -32,10 +32,3 @@ model:
 
 data:
   batch_size: 64
-
-logger:
-  wandb:
-    tags: ${tags}
-    group: "mnist"
-  aim:
-    experiment: "mnist"
